project setup with static library - one bug

--- a/PrahnaFiles/source_files/CMakeLists.txt
+++ b/PrahnaFiles/source_files/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.13 FATAL_ERROR) # sets minimum version of CMake required
-project(Prahna VERSION 0.1) # sets project name and version number
+project(prahna VERSION 0.1) # sets project name and version number
 set(CMAKE_CXX_STANDARD 17) # sets C++ standard
 set(CMAKE_CXX_STANDARD_REQUIRED True) # sets the min C++ standard as required
-add_library(prahna output.cpp) # creates a library called prahna, linking to main.cpp
+add_library(prahna output.cpp) # creates a library called prahna, linking to output.cpp
+set_target_properties(prahna PROPERTIES PUBLIC_HEADER ../header_files/output.h)
+install(TARGETS prahna LIBRARY DESTINATION lib 
+        PUBLIC_HEADER DESTINATION include)
